# barcodes-uc

./: README.md  pyproject.toml  test.py  testing.ipynb
barcodes_uc/qrcodes/: __main__.py  qrgenerator.py  qrinfo.py  qrutils.py
data/: error_correction_table.csv  format_table.csv
fastapi/: Spacefile  main.py  requirements.txt
